<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@color/snow"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question_1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tvAns1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question_2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tvAns2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question_3"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tvAns3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question_4"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tvAns4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question_5"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tvAns5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question_6"
        android:textColor="@color/black"

        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tvAns6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_light_transparent"
        android:onClick="sendDataSurvey"
        android:text="@string/send_data"
        android:textAllCaps="false" />

</LinearLayout>