<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seashell"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_Covid_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/tV_Survey"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/buttonsurvay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:onClick="goSurvay"
        android:textAllCaps="false"
        android:text="@string/enter_for_the_survey" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="7dp"
        android:background="@drawable/scroll_view_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/textViewScroll_View"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:padding="5dp"
                 android:textAllCaps="false"
                android:text="@string/covid_information" />


        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/buttonOpenMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:layout_marginBottom="20dp"
        android:onClick="openMenu"
        android:text="@string/covid_19_helpline_numbers" />

</LinearLayout>